--- a/docs/vnext/css/base/common.css
+++ b/docs/vnext/css/base/common.css
@@ -84,16 +84,16 @@ button#btnPushToVault {
 }
 
 @keyframes kf_good_flash {
-    from { background-color: initial }
-    to { background-color: #80D080 }
+    from { background-color: initial; }
+    to { background-color: #80D080; }
 }
 
 @keyframes kf_bad_flash {
-    from { background-color: initial }
-    to { background-color: #D08080 }
+    from { background-color: initial; }
+    to { background-color: #D08080; }
 }
 
-.good-flash {
+.good-flash, .good-flash .text  {
     background-color: transparent;
     animation-name: kf_good_flash;
     animation-duration: 100ms;
@@ -102,7 +102,7 @@ button#btnPushToVault {
     animation-direction: alternate;
 }
 
-.bad-flash {
+.bad-flash, .bad-flash .text {
     background-color: transparent;
     animation-name: kf_bad_flash;
     animation-duration: 100ms;
